--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,17 +1,16 @@
 {
   "dependencies": {
-    "com.unity.formats.fbx": "4.1.0-pre.2",
-    "com.unity.ide.rider": "3.0.7",
-    "com.unity.ide.visualstudio": "2.0.11",
-    "com.unity.ide.vscode": "1.2.3",
-    "com.unity.probuilder": "5.0.3",
-    "com.unity.render-pipelines.high-definition": "12.0.0",
-    "com.unity.render-pipelines.universal": "12.0.0",
-    "com.unity.test-framework": "1.1.27",
-    "com.unity.textmeshpro": "3.0.6",
-    "com.unity.timeline": "1.6.2",
-    "com.unity.toolchain.win-x86_64-linux-x86_64": "0.1.21-preview",
-    "com.unity.ugui": "1.0.0",
+    "com.unity.ai.navigation": "2.0.8",
+    "com.unity.formats.fbx": "5.1.3",
+    "com.unity.multiplayer.center": "1.0.0",
+    "com.unity.probuilder": "6.0.5",
+    "com.unity.render-pipelines.high-definition": "17.1.0",
+    "com.unity.render-pipelines.universal": "17.1.0",
+    "com.unity.test-framework": "1.5.1",
+    "com.unity.timeline": "1.8.8",
+    "com.unity.toolchain.win-x86_64-linux-x86_64": "2.0.10",
+    "com.unity.ugui": "2.0.0",
+    "com.unity.modules.accessibility": "1.0.0",
     "com.unity.modules.ai": "1.0.0",
     "com.unity.modules.androidjni": "1.0.0",
     "com.unity.modules.animation": "1.0.0",
